--- a/services/cv-command/package.json
+++ b/services/cv-command/package.json
@@ -26,6 +26,7 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.0",
+    "axios": "^1.9.0",
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "mongoose": "^8.14.0",
