--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,6 +96,8 @@ services:
     container_name: frontend
     ports:
       - "5173:5173"
+    environment:
+      - VITE_API_URL=http://gateway:3000
     depends_on:
       - gateway
 
